# ADT-BLE

./: .gitignore  LICENSE  README.md  additel_bt.py  adt_ble.py  pyproject.toml  requirements.txt
additel_ble/: __init__.py  cli.py  client.py  exceptions.py  protocol.py  py.typed  scanner.py  sync.py
docs/: 226_227_commands.txt  additel_ble_notes.md  additel_official_bluetooth_example.py  additel_official_bluetooth_guide.md  index.html  scpi_commands.md
examples/: async_usage.py  sync_usage.py
tests/: test_protocol.py  test_resolve.py
